--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -14,19 +14,19 @@
         </div>
         <div class="col">
             <div class="card shadow-lg p-3 mb-5 rounded">
-                 <img class="card-img-top" src="~/imgs/podrao.jfif" height="250" width="250"/>
+                 <img class="card-img-top" src="~/imgs/xsalada.jfif" height="250" width="250"/>
                   <div class="card-body border-5">
-                   <h5 class="card-title text-white">R$17,00</h5>
-                   <h6 class="card-subtitle text-white">Muito bão</h6>
+                   <h5 class="card-title text-white">R$5,00</h5>
+                   <h6 class="card-subtitle text-white">Muito bom também</h6>
                   </div>
             </div>
         </div>
         <div class="col">
             <div class="card shadow-lg p-3 mb-5 rounded">
-                 <img class="card-img-top" src="~/imgs/podrao.jfif" height="250" width="250"/>
+                 <img class="card-img-top" src="~/imgs/xburger.jfif" height="250" width="250"/>
                   <div class="card-body border-5">
-                   <h5 class="card-title text-white">R$17,00</h5>
-                   <h6 class="card-subtitle text-white">Muito bão</h6>
+                   <h5 class="card-title text-white">R$20,00</h5>
+                   <h6 class="card-subtitle text-white">Muito bão também</h6>
                   </div>
             </div>
         </div>
